src/objects/IT_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Affected_system__c</fullName>
        <label>Affected system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBS</fullName>
                </value>
                <value>
                    <fullName>EBA</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Internet Connection</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Datastore</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
                <value>
                    <fullName>ContactWorld</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>SF Partner Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_known_workaround__c</fullName>
        <label>Any known workaround</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_time_of_incident__c</fullName>
        <label>Date &amp; time of incident</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_time_of_next_update__c</fullName>
        <label>Date &amp; time of next update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_of_incident__c</fullName>
        <label>Details of incident</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_actions_being_undertaken__c</fullName>
        <label>Resolution actions being undertaken</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <label>IT Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITI{0000}</displayFormat>
        <label>IT INcident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>